--- a/app/src/main/assets/web/index.html
+++ b/app/src/main/assets/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>阅读3.0书源编辑器v4.0</title>
+    <title>阅读3.0书源编辑器_V4.0</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
