web写源加筛选

--- a/app/src/main/assets/web/index.html
+++ b/app/src/main/assets/web/index.html
@@ -337,6 +337,7 @@
                         <textarea class="context" id="DebugConsole" placeholder="这里用于输出调试信息"></textarea>
                     </div>
                     <div class="tab3">
+                        <input type="text" class="inputbox" id="Filter" placeholder="输入筛选关键词（源名称、源URL或源分组）后按回车筛选源">
                         <div class="titlebar">
                             <button id="Import">导入书源文件</button>
                             <button id="Export">导出书源文件</button>
