--- a/app/src/main/assets/web/index.html
+++ b/app/src/main/assets/web/index.html
@@ -359,7 +359,7 @@
                                 <br>(?i) 前缀表示忽略大小写
                             </div>
                             <a target="_blank" href="https://www.beta.browxy.com/">代码在线运行工具</a>
-                            <a target="_blank" href="old/bookshelf.html">阅读书架(经典)</a>
+                            <a target="_blank" href="bookshelf.html">阅读书架(经典)</a>
 							<a target="_blank" href="new/bookshelf.html">阅读书架(新潮)</a>
                         </div>
                     </div>
